--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
     <!-- Telo portfolio -->
 
-    <section>
+    <section class="section">
       <h2 hidden>5 words</h2>
       <ul class="ulstyle">
         <li><button type="button" class="btnP">All</button></li>
@@ -59,7 +59,7 @@
 
     <!-- Картинки. делал сразу с ссылками но честно хз зачем. мне показалось так будет лучше -->
 
-    <section class="PS2">
+    <section class="section PS2">
       <h2 hidden>9 картинок</h2>
       <ul class="ulstyle">
         <li>
@@ -174,32 +174,34 @@
 
     <!-- nogi -->
     <footer class="foot">
-      <a href="" class="links">
-        <p class="logo links">Web<span class="logo3 links">Studio</span></p></a
-      >
+      <div class="container">
+        <a href="" class="links ">
+          <p class="logo logodown">Web<span class="logo3">Studio</span></p></a
+        >
 
-      <address id="adres">
-        <ul class="ulstyle">
-          <li>
-            <a
-              href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
-              class="Adress links"
-            >
-              695 Park Ave, NY 10065, USA</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="MiT links"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+12127724150           " class="MiT links"
-              >+1 212-772-4150
-            </a>
-          </li>
-        </ul>
-      </address>
+        <address id="adres ">
+          <ul class="ulstyle">
+            <li class="Adress">
+              <a
+                href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
+                class="Adress links"
+              >
+                695 Park Ave, NY 10065, USA</a
+              >
+            </li>
+            <li class="Adress">
+              <a href="mailto:info@devstudio.com" class="MiT links"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="teldown">
+              <a href="tel:+12127724150           " class="MiT links"
+                >+1 212-772-4150
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
