--- a/index.html
+++ b/index.html
@@ -24,162 +24,199 @@
     <!-- Zagolovok -->
 
     <header class="head">
-      <a href="" class="links">
-        <p class="logo links">Web<span class="logo2 links">Studio</span></p></a
-      >
-
-      <nav>
-        <ul class="ulstyle">
-          <li><a href="index.html" class="TextNAV links">Studio</a></li>
-          <li>
-            <a href="portfolio.html" class="TextNAV links"> Portfolio </a>
-          </li>
-          <li><a href="#adres" class="TextNAV links"> Contacts </a></li>
-        </ul>
-        <a href="mailto:info@devstudio.com" class="mit links"
-          >info@devstudio.com</a
+      <div class="container">
+        <a href="" class="links">
+          <p class="logo">Web<span class="logo2">Studio</span></p></a
         >
 
-        <a href="tel:+12127724150" class="mit links">+1 212-772-4150</a>
-      </nav>
+        <nav>
+          <ul class="ulstyle">
+            <li>
+              <a href="index.html" class="TextNAV links studioP">Studio</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="TextNAV links portfolioP">
+                Portfolio
+              </a>
+            </li>
+            <li>
+              <a href="#adres" class="TextNAV links contactsP"> Contacts </a>
+            </li>
+          </ul>
+          <a href="mailto:info@devstudio.com" class="mit links"
+            >info@devstudio.com</a
+          >
+
+          <a href="tel:+12127724150" class="mit links">+1 212-772-4150</a>
+        </nav>
+      </div>
     </header>
 
     <!-- telo -->
 
     <main>
       <!-- hero -->
-      <section class="WS0">
-        <h1 class="HERO">Effective solutions for your bussines</h1>
-        <button type="button" class="Hbutton">Request our service</button>
+      <section class="section WS0">
+        <div class="container">
+          <h1 class="HERO">Effective solutions for your bussines</h1>
+          <button type="button" class="Hbutton">Request our service</button>
+        </div>
       </section>
 
-      <section class="WS1">
-        <ul class="ulstyle">
-          <li>
-            <h3 class="WS1h3">Attention to details</h3>
-            <p class="WS1P">
-              We go into all the details and processes of your business to
-              develop a customized solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="WS1h3">Punctuality</h3>
-            <p class="WS1P">
-              With us, you can feel safe and secure. An important principle of
-              the company: respect your time and deadlines.
-            </p>
-          </li>
-          <li>
-            <h3 class="WS1h3">Planning</h3>
-            <p class="WS1P">
-              You will be able to observe and participate in every phase of
-              solution development and implementation.
-            </p>
-          </li>
-          <li>
-            <h3 class="WS1h3">Modern technologies</h3>
-            <p class="WS1P">
-              We use innovative tools to solve assigned tasks. It's time to
-              simplify work processes.
-            </p>
-          </li>
-        </ul>
+      <section class="section WS1">
+        <div class="container">
+          <ul class="ulstyle">
+            <li>
+              <h3 class="WS1h3">Attention to details</h3>
+              <p class="WS1P">
+                We go into all the details and processes of your business to
+                develop a customized solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="WS1h3">Punctuality</h3>
+              <p class="WS1P">
+                With us, you can feel safe and secure. An important principle of
+                the company: respect your time and deadlines.
+              </p>
+            </li>
+            <li>
+              <h3 class="WS1h3">Planning</h3>
+              <p class="WS1P">
+                You will be able to observe and participate in every phase of
+                solution development and implementation.
+              </p>
+            </li>
+            <li>
+              <h3 class="WS1h3">Modern technologies</h3>
+              <p class="WS1P">
+                We use innovative tools to solve assigned tasks. It's time to
+                simplify work processes.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- work -->
 
-      <section class="WS2">
-        <h2 class="WS2h2">What we do</h2>
-        <ul class="ulstyle">
-          <li>
-            <img src="images2/11.jpg" alt="printing" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images2/22.jpg" alt="looking" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images2/33.jpg" alt="drawing" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="section WS2">
+        <div class="container">
+          <h2 class="WS2h2">What we do</h2>
+          <ul class="ulstyle">
+            <li>
+              <img
+                src="images2/11.jpg"
+                alt="printing"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images2/22.jpg"
+                alt="looking"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images2/33.jpg"
+                alt="drawing"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- workers -->
 
-      <section class="WS3">
-        <h2 class="WS3h2">Our Team</h2>
-        <ul class="ulstyle">
-          <li>
-            <img
-              src="images2/44.jpg"
-              alt="Product Designer"
-              width="270"
-              height="368"
-            />
-            <h3 class="WS3h3">Christopher Walker</h3>
-            <p class="WS3p">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="images2/55.jpg"
-              alt="Frontend Developer"
-              width="270"
-              height="368"
-            />
-            <h3 class="WS3h3">Kylie Evans</h3>
-            <p class="WS3p">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="images2/66.jpg"
-              alt="Marketing"
-              width="270"
-              height="368"
-            />
-            <h3 class="WS3h3">Ryan Harris</h3>
-            <p class="WS3p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images2/77.jpg"
-              alt="UI Designer"
-              width="270"
-              height="368"
-            />
-            <h3 class="WS3h3">Tyler Moore</h3>
-            <p class="WS3p">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section WS3">
+        <div class="container">
+          <h2 class="WS3h2">Our Team</h2>
+          <ul class="ulstyle">
+            <li>
+              <img
+                class="imgworkers"
+                src="images2/44.jpg"
+                alt="Product Designer"
+                width="270"
+                height="368"
+              />
+              <h3 class="WS3h3">Christopher Walker</h3>
+              <p class="WS3p">Product Designer</p>
+            </li>
+            <li>
+              <img
+                class="imgworkers"
+                src="images2/55.jpg"
+                alt="Frontend Developer"
+                width="270"
+                height="368"
+              />
+              <h3 class="WS3h3">Kylie Evans</h3>
+              <p class="WS3p">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                class="imgworkers"
+                src="images2/66.jpg"
+                alt="Marketing"
+                width="270"
+                height="368"
+              />
+              <h3 class="WS3h3">Ryan Harris</h3>
+              <p class="WS3p">Marketing</p>
+            </li>
+            <li>
+              <img
+                class="imgworkers"
+                src="images2/77.jpg"
+                alt="UI Designer"
+                width="270"
+                height="368"
+              />
+              <h3 class="WS3h3">Tyler Moore</h3>
+              <p class="WS3p">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- nogi -->
     <footer class="foot">
-      <a href="" class="links">
-        <p class="logo links">Web<span class="logo3 links">Studio</span></p></a
-      >
+      <div class="container">
+        <a href="" class="links ">
+          <p class="logo logodown">Web<span class="logo3">Studio</span></p></a
+        >
 
-      <address id="adres">
-        <ul class="ulstyle">
-          <li>
-            <a
-              href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
-              class="Adress links"
-            >
-              695 Park Ave, NY 10065, USA</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="MiT links"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+12127724150           " class="MiT links"
-              >+1 212-772-4150
-            </a>
-          </li>
-        </ul>
-      </address>
+        <address id="adres ">
+          <ul class="ulstyle">
+            <li class="Adress">
+              <a
+                href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
+                class="Adress links"
+              >
+                695 Park Ave, NY 10065, USA</a
+              >
+            </li>
+            <li class="Adress">
+              <a href="mailto:info@devstudio.com" class="MiT links"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="teldown">
+              <a href="tel:+12127724150           " class="MiT links"
+                >+1 212-772-4150
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
