--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Zagolovok -->
+    <!------- Голова--------->
 
     <header class="head">
       <div class="container">
@@ -29,7 +29,7 @@
           <p class="logo">Web<span class="logo2">Studio</span></p></a
         >
 
-        <nav>
+        <nav class="logonavflex">
           <ul class="ulstyle">
             <li>
               <a href="index.html" class="TextNAV links studioP">Studio</a>
@@ -43,11 +43,11 @@
               <a href="#adres" class="TextNAV links contactsP"> Contacts </a>
             </li>
           </ul>
-          <a href="mailto:info@devstudio.com" class="mit links"
+          <a href="mailto:info@devstudio.com" class="mit links mailmargin"
             >info@devstudio.com</a
           >
 
-          <a href="tel:+12127724150" class="mit links">+1 212-772-4150</a>
+          <a href="tel:+12127724150" class="mit links telmargin">+1 212-772-4150</a>
         </nav>
       </div>
     </header>
@@ -189,13 +189,13 @@
 
     <!-- nogi -->
     <footer class="foot">
-      <div class="container">
+      <div class="container ">
         <a href="" class="links ">
           <p class="logo logodown">Web<span class="logo3">Studio</span></p></a
         >
 
         <address id="adres ">
-          <ul class="ulstyle">
+          <ul class="ulstyle2">
             <li class="Adress">
               <a
                 href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
