--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,34 @@
     <!-- Zagolovok -->
 
     <header class="head">
-      <a href="" class="links">
-        <p class="logo links">Web<span class="logo2 links">Studio</span></p></a
-      >
-
-      <nav>
-        <ul class="ulstyle">
-          <li><a href="index.html" class="TextNAV links">Studio</a></li>
-          <li>
-            <a href="portfolio.html" class="TextNAV links"> Portfolio </a>
-          </li>
-          <li><a href="#adres" class="TextNAV links"> Contacts </a></li>
-        </ul>
-        <a href="mailto:info@devstudio.com" class="mit links"
-          >info@devstudio.com</a
+      <div class="container">
+        <a href="" class="links">
+          <p class="logo">Web<span class="logo2">Studio</span></p></a
         >
 
-        <a href="tel:+12127724150" class="mit links">+1 212-772-4150</a>
-      </nav>
+        <nav class="logonavflex">
+          <ul class="ulstyle">
+            <li>
+              <a href="index.html" class="TextNAV links studioP">Studio</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="TextNAV links portfolioP">
+                Portfolio
+              </a>
+            </li>
+            <li>
+              <a href="#adres" class="TextNAV links contactsP"> Contacts </a>
+            </li>
+          </ul>
+          <a href="mailto:info@devstudio.com" class="mit links mailmargin"
+            >info@devstudio.com</a
+          >
+
+          <a href="tel:+12127724150" class="mit links telmargin"
+            >+1 212-772-4150</a
+          >
+        </nav>
+      </div>
     </header>
 
     <!-- Telo portfolio -->
@@ -180,7 +190,7 @@
         >
 
         <address id="adres ">
-          <ul class="ulstyle">
+          <ul class="ulstyle2">
             <li class="Adress">
               <a
                 href="https://goo.gl/maps/sysVn6ksB4e81yKR6"
