--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
             >info@devstudio.com</a
           >
 
-          <a href="tel:+12127724150" class="mit links telmargin">+1 212-772-4150</a>
+          <a href="tel:+12127724150" class="mit links telmargin"
+            >+1 212-772-4150</a
+          >
         </nav>
+        <div class="line"></div>
       </div>
     </header>
 
@@ -67,22 +70,22 @@
         <div class="container">
           <ul class="ulstyle">
             <li>
-              <h3 class="WS1h3">Attention to details</h3>
-              <p class="WS1P">
+              <h3 class="WS1h3 WW">Attention to details</h3>
+              <p class="WS1P WW">
                 We go into all the details and processes of your business to
                 develop a customized solution.
               </p>
             </li>
             <li>
-              <h3 class="WS1h3">Punctuality</h3>
-              <p class="WS1P">
+              <h3 class="WS1h3 WW">Punctuality</h3>
+              <p class="WS1P WW">
                 With us, you can feel safe and secure. An important principle of
                 the company: respect your time and deadlines.
               </p>
             </li>
             <li>
-              <h3 class="WS1h3">Planning</h3>
-              <p class="WS1P">
+              <h3 class="WS1h3 WW">Planning</h3>
+              <p class="WS1P WW">
                 You will be able to observe and participate in every phase of
                 solution development and implementation.
               </p>
@@ -104,7 +107,7 @@
         <div class="container">
           <h2 class="WS2h2">What we do</h2>
           <ul class="ulstyle">
-            <li>
+            <li class="WW">
               <img
                 src="images2/11.jpg"
                 alt="printing"
@@ -112,7 +115,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="WW">
               <img
                 src="images2/22.jpg"
                 alt="looking"
@@ -138,7 +141,7 @@
         <div class="container">
           <h2 class="WS3h2">Our Team</h2>
           <ul class="ulstyle">
-            <li>
+            <li class="WW">
               <img
                 class="imgworkers"
                 src="images2/44.jpg"
@@ -146,10 +149,12 @@
                 width="270"
                 height="368"
               />
-              <h3 class="WS3h3">Christopher Walker</h3>
-              <p class="WS3p">Product Designer</p>
+              <div class="namesborder">
+                <h3 class="WS3h3">Christopher Walker</h3>
+                <p class="WS3p">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="WW">
               <img
                 class="imgworkers"
                 src="images2/55.jpg"
@@ -157,10 +162,12 @@
                 width="270"
                 height="368"
               />
-              <h3 class="WS3h3">Kylie Evans</h3>
-              <p class="WS3p">Frontend Developer</p>
+              <div class="namesborder">
+                <h3 class="WS3h3">Kylie Evans</h3>
+                <p class="WS3p">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="WW">
               <img
                 class="imgworkers"
                 src="images2/66.jpg"
@@ -168,10 +175,12 @@
                 width="270"
                 height="368"
               />
-              <h3 class="WS3h3">Ryan Harris</h3>
-              <p class="WS3p">Marketing</p>
+              <div class="namesborder">
+                <h3 class="WS3h3">Ryan Harris</h3>
+                <p class="WS3p">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="border">
               <img
                 class="imgworkers"
                 src="images2/77.jpg"
@@ -179,8 +188,10 @@
                 width="270"
                 height="368"
               />
-              <h3 class="WS3h3">Tyler Moore</h3>
-              <p class="WS3p">UI Designer</p>
+              <div class="namesborder">
+                <h3 class="WS3h3">Tyler Moore</h3>
+                <p class="WS3p">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -189,12 +200,12 @@
 
     <!-- nogi -->
     <footer class="foot">
-      <div class="container ">
-        <a href="" class="links ">
+      <div class="container">
+        <a href="" class="links">
           <p class="logo logodown">Web<span class="logo3">Studio</span></p></a
         >
 
-        <address id="adres ">
+        <address id="adres">
           <ul class="ulstyle2">
             <li class="Adress">
               <a
